--- a/src/components/NavBar/css/NavBar.module.css
+++ b/src/components/NavBar/css/NavBar.module.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fredoka:wght@300;400;500;600;700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 .navbar {
   width: 100%;
   display: flex;
@@ -5,12 +6,11 @@
   top: 0;
   padding: 1.2rem 0;
   border-bottom: 2px solid #D9C4B8;
+  font-family: "Fira Sans", sans-serif;
 }
 .navbar .navbar__wrapper {
   width: 100%;
   max-width: 1120px;
-
-  overflow: visible;
   display: flex;
   margin: 0 auto;
   list-style: none;
