--- a/src/components/NavBar/css/NavBar.module.scss
+++ b/src/components/NavBar/css/NavBar.module.scss
@@ -7,6 +7,7 @@
   top: 0;
   padding: 1.2rem 0;
   border-bottom: 2px solid $colorFour;
+  font-family: $fontOne;
 
   .navbar__wrapper {
     width: 100%;
