--- a/src/components/NavBar/css/NavBarLink.module.css
+++ b/src/components/NavBar/css/NavBarLink.module.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fredoka:wght@300;400;500;600;700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 .navbar__link {
   color: #264773;
   border: none;
@@ -6,4 +7,11 @@
   font-weight: 600;
   font-size: 1.1rem;
   margin: 0 1rem;
+}
+.navbar__link.navbar__link--sub {
+  color: #0D0D0D;
+  font-weight: 400;
+  font-size: 1rem;
+  margin: 0;
+  padding: 0;
 }
