--- a/src/pages/PageDisplay.module.css
+++ b/src/pages/PageDisplay.module.css
@@ -1,6 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fredoka:wght@300;400;500;600;700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 .page__wrapper {
   display: flex;
+  flex-direction: column;
   width: 100%;
   margin: 8rem auto;
   max-width: 1120px;
+  font-family: "Fira Sans", sans-serif;
+}
+.page__wrapper .page__title {
+  color: #0D0D0D;
+  border-bottom: 2px solid #264773;
+  padding-bottom: 1rem;
+}
+.page__wrapper .page__fileName {
+  font-weight: 500;
+  font-family: "Fredoka", sans-serif;
+  font-size: 1.4rem;
+}
+.page__wrapper .page__desc {
+  font-weight: 400;
+  font-size: 1.2rem;
 }
