--- a/src/components/NavBar/css/NavBar.module.css
+++ b/src/components/NavBar/css/NavBar.module.css
@@ -5,6 +5,7 @@
   position: fixed;
   top: 0;
   padding: 1.2rem 0;
+  background-color: #fff;
   border-bottom: 2px solid #D9C4B8;
   font-family: "Fira Sans", sans-serif;
 }
