--- a/src/pages/PageDisplay.module.scss
+++ b/src/pages/PageDisplay.module.scss
@@ -14,6 +14,10 @@
     border-bottom: 2px solid $colorTwo;
     padding-bottom: 1rem;
   }
+  
+  .page__overlayDesc {
+    font-weight: 600;
+  }
 
   .page__fileName {
     font-weight: 500;
